<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SDCardTracActivity!</string>
    <string name="app_name">StorageTrac</string>
    <string name="default_service_start_offset_in_s">10</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enable_tracker">Enable tracking</string>
    <string name="enabled_tracker">Enabled</string>
    <string name="disabled_tracker">Disabled</string>
    <string name="enabling_tracker">Enabling…</string>

    <string name="tracker_update_interval">Update interval…</string>
    <string name="tracker_delete_data">Delete history…</string>

    <string name="changelog_dialog_title">Files changed</string>
    <string name="changelog_dialog_button">Done</string>

    <string name="act_goto_settings">SETTINGS</string>
    <string name="db_empty_error">
        No data found. Please check if tracking is enabled in settings or check again later.
    </string>

    <string name="app_booted">app booted</string>
    <string name="media_not_mounted">Storage device unavailable,
        please check if phone is in USB storage mode or the physical device is inserted.
    </string>

    <string name="help_text">
        <b>StorageTrac</b> plots activity in your device\'s external storage(s).
        \n\n
            - <b>Touch</b> to select a point \n
            - <b>Touch again</b> to view activity at selected point, buttons at the bottom of the screen can also be used to navigate \n
            - <b>Swipe</b> right in the dialog to view different types of activity \n
            - <b>Search</b> activity history for files \n\n
        <u><big>Credits</big></u>\n
        - <a href="http://android-graphview.org/">android-graphview.org</a>\n
        - <a href="http://findicons.com">findicons.com</a>
    </string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="no_files">None</string>
    <string name="exit_help">exitHelp</string>
    <string name="enable_debug">Enable logging</string>

    <string name="delete_title">Delete data older than</string>
    <string name="delete_now">Now!</string>
    <string name="delete_week">Week</string>
    <string name="delete_month">Month</string>
    <string name="delete_year">Year</string>
    <string name="delete_warn">WARNING: This operation cannot be undone!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name='data_deleted'>Data deleted</string>

    <string name="pref_general_title">General</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_help_title">Help</string>
    <string name="pref_help_page">User guide…</string>
    <string name="pref_help_page_sum">Opens app walk-through page in the browser</string>

    <string name="pref_donate_title">Donate</string>
    <string name="pref_web_page">Flattr this app…</string>
    <string name="pref_web_page_sum">Opens the flattr.com page in the browser</string>
    <string name="pref_bitcoin_app">Donate Bitcoins…</string>
    <string name="pref_bitcoin_app_sum">Send Bitcoins using a Bitcoin wallet app</string>
    <string name="pref_bitcoin_satoshi">Enter number of Bitcoins in Satoshis</string>
    <string name="donate_thanks">Thank you for the donation!</string>

    <string name="advanced_option_1">Coming soon</string>

    <string name="search_hint">Search history</string>
    <string name="search_no_data">No data</string>
    <string name="search_done">Search complete</string>
    <string name="title_search">Search results</string>

    <string name="show_hidden">Show hidden files</string>
    <string name="show_hidden_sum">Show files starting with . in search and popup</string>
</resources>
